--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
 <script src="core/js/bootstrap.min.js"></script>
+<link href="core/css/octicons.css" rel="stylesheet">
+<link href="core/css/sprockets-octicons.scss" rel="stylesheet">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -112,6 +114,10 @@
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
+                    <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
+                    </li>
+                    <li><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
+                    </li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -151,7 +157,7 @@
                 <br>
                 <a href="stuff/pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
                 <br>
-                <kbd><a href="things.html">Click here for more things that I made.</a></kbd>
+                <a href="things.html">Click here for more!</a>
                 <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                 <br>
             </p>
@@ -173,10 +179,12 @@
                 <p>You can contact me at
                     <br>
                     <kbd>business 'at' this domain</kbd>
-                    <br>and we can work things out if you ever need a crappy website like this one.
-                    <p>
+                    <br>for business things or
+                    <br><kbd>stormyjet 'at' this domain</kbd>
+                    <br>for more general things.
 
-                    </p>
+
+                </p>
             </div>
             <div class="col-lg-4 ">
                 <h2>Blog</h2>
@@ -192,6 +200,7 @@
             <center>
                 <p>
                     Made by StormyJet. Uses code from Bootstrap.
+                    <br>Made with <span class="octicon octicon-heart"></span> and hosted on <span class="octicon octicon-logo-github"></span>
                 </p>
 
             </center>
