--- a/things.html
+++ b/things.html
@@ -101,6 +101,10 @@
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
+                    <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
+                    </li>
+                    <li><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
+                    </li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
