--- a/stats.html
+++ b/stats.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
 <script src="core/js/bootstrap.min.js"></script>
-<link href="core/css/octicons.css" rel="stylesheet">
-<link href="core/css/sprockets-octicons.scss" rel="stylesheet">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -105,6 +102,10 @@
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
+                    <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
+                    </li>
+                    <li class="active"><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
+                    </li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -126,64 +127,41 @@
                 <center>
                     <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
-                        <p style="font-size:750%;word-wrap:break-word;">desktop text bigger</p>
+                        <p style="font-size:750%;word-wrap:break-word;">Statistics</p>
                     </div>
                     <div class="hidden-md hidden-lg">
                         <!-- Hidden on Non-Mobile-->
-                        <h1><strong>non desktop smaller</strong></h1>
+                        <h1><strong>Statistics</strong></h1>
                     </div>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" style="font-size: 200%;"></div>
 
             </div>
             <!--end the gray box-->
-            <p class="lead">Smaller text goes here. it can be a few sentences or a paragraph! wow.
-                <br>Look! Im on a new line!
-                <br>
-                <em>EMPHASISED</em>  <strong>BOLDED</strong>
-
-            </p>
+            <p class="lead">Transparency is important, so is data. Here is the stats of my website, according to Google.</p>
             </center>
-        </div>
-        <hr>
-        <div class="row ">
-            <div class="col-lg-4 ">
-                <h2>LOOK AT ALL OF THIS!</h2>
-                <p>BOX</p>
-                <p><a class="btn btn-primary " href="#" role="button ">BUTTON &raquo;</a>
-                </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>ANOTHER BOX </h2>
 
-                <p>Omg!
-                    <br>A box without a button!
+            <hr>
+            <br>
+            <iframe src="http://www.seethestats.com/stats/13426/Pageviews_222dba17e_ifr.html" style="width:700px;height:300px;border:none;" scrolling="no" frameborder="0"></iframe>
+            <br>
+            <iframe src="http://www.seethestats.com/stats/13426/UniquePageviews_624baf87c_ifr.html" style="width:700px;height:300px;border:none;" scrolling="no" frameborder="0"></iframe>
+            <br>
+            <iframe src="http://www.seethestats.com/stats/13426/VisitsByCountry_e26e9adb6_ifr.html" style="width:700px;height:300px;border:none;" scrolling="no" frameborder="0"></iframe>
+            <hr>
+            <!-- Footer Begins Here -->
+            <div class="footer ">
+                <center>
                     <p>
-
+                        Made by StormyJet. Uses code from Bootstrap.
+                        <br>Made with <span class="octicon octicon-heart"></span> and hosted on <span class="octicon octicon-logo-github"></span>
                     </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>phew</h2>
-                <p>this one has a button</p>
-                <p><a class="btn btn-primary " href="#" role="button ">YAY &raquo;</a>
-                </p>
-            </div>
-        </div>-->
-        <br>
-        <hr>
-        <!-- Footer Begins Here -->
-        <div class="footer ">
-            <center>
-                <p>
-                    Made by StormyJet. Uses code from Bootstrap.
-                    <br><span class="octicon octicon-radio-tower"></span> with <span class="octicon octicon-heart"></span> by <span class="octicon octicon-logo-github"></span>
-                </p>
 
-            </center>
+                </center>
+            </div>
+
         </div>
-
-    </div>
-    <!-- /container -->
+        <!-- /container -->
 
 </body>
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
