--- a/stats.html
+++ b/stats.html
@@ -104,7 +104,7 @@
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
                     </li>
-                    <li class="active"><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
+                    <li><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
                     </li>
                 </ul>
             </div>
