--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
                     </li>
-                    <li><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
+                    <li><a href="stats.html"><span class="octicon octicon-pulse"></span></a>
                     </li>
                 </ul>
             </div>
