--- a/things.html
+++ b/things.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href="core/css/bootstrap.min.css" rel="stylesheet">
+<script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
 <script src="core/js/bootstrap.min.js"></script>
+<link href="core/css/octicons.css" rel="stylesheet">
+<link href="core/css/sprockets-octicons.scss" rel="stylesheet">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -103,7 +106,7 @@
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
                     </li>
-                    <li><a href="stats.html"><span class="glyphicon glyphicon-stats"></span></a>
+                    <li><a href="stats.html"><span class="octicon octicon-pulse"></span></a>
                     </li>
                 </ul>
             </div>
