--- a/template.html
+++ b/template.html
@@ -64,7 +64,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website
+                <a class="navbar-brand" href="index.html">Stormy's Website
                 </a>
 
 
