Learn how to make great Git commits with this one simple trick!

--- a/404.html
+++ b/404.html
@@ -95,8 +95,8 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>
+                    <!--<li class="bg-danger"><a href="htda/">HTDA</a>
+                    </li>-->
                     <li class="bg-info"><a href="http://stormyjet.com/meteor/index.html">Meteor Game</a>
                     </li>
                 </ul>
