--- a/template.html
+++ b/template.html
@@ -101,8 +101,8 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>
+                    <!--<li class="bg-danger"><a href="htda/">HTDA</a>
+                    </li>-->
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
                 </ul>
