--- a/htda/index.html
+++ b/htda/index.html
@@ -1,177 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="../core/css/bootstrap.min.css" rel="stylesheet">
-<script src="../core/js/google.js"></script>
-<script src="../core/js/bootstrap.min.js"></script>
+<div align="center" style="vertical-align:middle;">
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="This is the official website for StormyJet. I don't know why I said official because I'm not popular enough for fakes.">
-    <meta name="keywords" content="stormy , stormyjet , stormys website , website ">
-    <meta name="robot" content="index,follow">
-    <meta name="author" content="stormyjet">
-    <meta name="language" content="en-us">
-    <meta name="revisit-after" content="30">
-    <meta name="google-site-verification" content="OkvES3vkDmmuSt2GLXE6-uSqPoyssekJ5quiSMuP5RM" />
-    <link rel="shortcut icon" href="/core/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/core/img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/core/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/core/img/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/core/img/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/core/img/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/core/img/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/core/img/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/core/img/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/core/img/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/core/img/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/core/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/core/img/favicon-32x32.png" sizes="32x32">
-    <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
-    <meta name="msapplication-config" content="/core/img/browserconfig.xml">
-    <title>How To Do Anything</title>
-</head>
-<!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+    <head>
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-<body>
-    <center>
-        <!--
-        <div class="alert alert-success">
-            <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
-        </div>-->
-        <!--<div class="alert alert-info">
-
-            <p style="font-size:22px;">
-                <strong>Attention!</strong> info</p>
-        </div>-->
-        <!--<div class="alert alert-warning">
-            <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
-        </div>
-        <div class="alert alert-danger">
-            <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
-        </div>-->
-    </center>
+            ga('create', 'UA-31660701-1', 'stormyjet.com');
+            ga('send', 'pageview');
+        </script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="/img/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
+        <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
+        <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
+        <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+        <meta name="msapplication-TileColor" content="#b91d47">
+        <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
+        <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
+        <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
+        <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
+        <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
+        <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
 
-    <!--Nav Begins Here-->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="../../topsecret.html">How To Do Anything
-                </a>
+        <title>Cancer Check</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="../core/css/bootstrap.min.css" rel="stylesheet">
 
 
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
-                    </li>
-                    <li><a href="list.html">List</a>
-                    </li>
-                    <!--<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="random/cancer.html">Cancer Checker</a>
-                            </li>
-                            <li><a href="stuff/pokecrate/index.html">Pokecrate</a>
-                            </li>
-                            <li><a href="http://twitter.com/stormyjet">Twitter</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Technical Stuff</li>
-                            <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
-                            </li>
-                        </ul>
-                    </li>-->
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <!--<li>
-                        <p class="navbar-text navbar-right">Under Construction |</p>
-                    </li>
-                    <li>
-                        <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>-->
-                    <li class="bg-primary"><a style="color:white" href="../index.html">Main Site</a>
-                    </li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-    </div>
-    <!--Nav ends here-->
-    <center>
+        <link href="http://stormyjet.com/random/css/cover.css" rel="stylesheet">
 
-        <p class="nocss ">Whoa there.
-            <br>Looks like the page didn't load properly.
-            <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
-            <br>If you're smart, the CSS didn't load, so this happened.</p>
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
 
-    </center>
+    </head>
 
-    <!-- Jumbotron -->
-    <div class="container">
-        <div>
-            <div class="jumbotron">
-                <center>
-                    <div class="hidden-xs hidden-sm">
-                        <!--Hidden on Mobile-->
-                        <p style="font-size:750%;word-wrap:break-word;">How To Do Anything</p>
+
+    <body>
+
+        <div class="site-wrapper">
+
+            <div class="site-wrapper-inner">
+
+                <div class="cover-container">
+
+                    <div class="masthead clearfix">
+                        <div class="inner">
+
+                            <center>
+                                <h2>How to do Anything</h2>
+                                <h4>According to the internet</h4>
+                            </center>
+
+                        </div>
                     </div>
-                    <div class="hidden-md hidden-lg">
-                        <!-- Hidden on Non-Mobile-->
-                        <h1><strong>How To Do Anything</strong></h1>
+                    <br>
+                    <br>
+                    <br>
+                    <div style="vertical-align:middle;">
+
+
+                        <center>
+                            <h1 style="float:center;font-size:750%;">Coming Soon!</h1>
+                        </center>
+
+
+
+
+
+
+                        <div class="mastfoot">
+                            <div class="inner">
+
+                            </div>
+                        </div>
+
                     </div>
-                    <!--Candies are shown here, if they don't load, the text is shown-->
-                    <div id="candy" class="subtext">according to the internet</div>
+
+                </div>
 
             </div>
-            <!--end the gray box-->
-            <p class="lead">Hello! This is the website for How to do Anything, according to the internet. Here will be collected facts on how to do nearly anything you will ever need. It may not be 100% accurate, but it will consist of the facts brought to you by 4chan, Reddit, and more.</p>
-            <br>
-            <br>
-            <div class="jumbotron">
-                <center>
-                    <strong>How To:</strong>
-                    <br>
-                    <a href="howto/beinvisible.html">Be essentially invisible</a> (reddit)
-                    <br>
-                    <kbd>more coming soon</kbd>
-                </center>
-            </div>
-        </div>
-        <hr>
-        <!-- Footer Begins Here -->
-        <div class="footer ">
-            <center>
-                <p>
-                    Made by StormyJet. Uses code from Bootstrap. This isn't a lawyer service, and some things may not be true. Find one? Send it to me on Twitter, <a href="http://twitter.com/stormyjet">@StormyJet</a>. Please don't use this as justification in court, that'd be dumb.
-                </p>
 
-            </center>
-        </div>
-
+            <!-- Bootstrap core JavaScript
+    ================================================== -->
+            <!-- Placed at the end of the document so the pages load faster -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+            <script src="../../dist/js/bootstrap.min.js"></script>
+            <script src="../../assets/js/docs.min.js"></script>
+    </body>
     </div>
-    <!-- /container -->
-
-</body>
-<!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script>
-    window.jQuery || document.write('<script src="../../core/js/vendor/jquery-1.8.2.min.js"><\/script>')
-</script>
-<!--<script src="core/js/vendor/bootstrap.min.js"></script>-->
-<script src="../core/js/main.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="../core/js/docs.min.js"></script>
-</body>
 
 </html>
