--- a/random/YourMom.html
+++ b/random/YourMom.html
@@ -1,6 +1,42 @@
 <title>Your Mom Joke Gen</title>
-<script src="js/yourmom.js"></script>
 <script src="js/yourmompart2.js"></script>
+<script>
+    //PART 1
+    var request = new XMLHttpRequest();
+    request.onload = function() {
+        // get the file contents
+        var fileContent = this.responseText;
+        // split into lines
+        var fileContentLines = fileContent.split('\n');
+        // get a random index (line number)
+        var randomLineIndex = Math.floor(Math.random() * fileContentLines.length);
+        // extract the value
+        var randomLine = fileContentLines[randomLineIndex];
+
+
+        document.getElementById('first').innerHTML = randomLine;
+    };
+    request.open('GET', 'http://stormyjet.com/random/txt/ym-first.txt', true);
+</script>
+<script>
+    request.send();
+    var request = new XMLHttpRequest();
+    request.onload = function() {
+        // get the file contents
+        var fileContent = this.responseText;
+        // split into lines
+        var fileContentLines = fileContent.split('\n');
+        // get a random index (line number)
+        var randomLineIndex = Math.floor(Math.random() * fileContentLines.length);
+        // extract the value
+        var randomLine = fileContentLines[randomLineIndex];
+
+
+        document.getElementById('second').innerHTML = randomLine;
+    };
+    request.open('GET', 'http://stormyjet.com/random/txt/ym-second.txt', true);
+    request.send();
+</script>
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
