--- a/topsecret.html
+++ b/topsecret.html
@@ -15,11 +15,10 @@
         <source src="core/sound/interiorcrocodilealligator.mp3" type="audio/mpeg">
     </audio>
 
-
-    click the picture to go back to home page
+    <br>click the picture to go back to home page
     <br>
     <br>
 
-    <a href="http://spody.org/flash/DAILYDOSE.swf">or go deeper into the rabbit hole.</a>
+    <a href="topsecret2.html">or go deeper into the rabbit hole.</a>
 
 </html>
