22 ways that Git is better than Subversion

--- a/topsecret2.html
+++ b/topsecret2.html
@@ -9,7 +9,13 @@
             $('#preload-img').css('display', 'none');
         });
     </script>
-    <iframe width="100%" height="100%" frameborder="0" src="http://spody.org" />
-    < /div>
+
+    <body>
+        <iframe width="100%" height="100%" frameborder="0" src="http://spody.org" />
+        < /div>
+    </body>
+    <foot>
+        <a href="http://stormyjet.com">ENOUGH!</a>
+    </foot>
 
 </html>
