--- a/topsecret2.html
+++ b/topsecret2.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html>
+<style type="text/css">
+    body,
+    html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    #content {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0px;
+    }
+</style>
 <script src="core/js/google.js"></script>
 <div id="content">
     <script>
@@ -9,13 +25,14 @@
             $('#preload-img').css('display', 'none');
         });
     </script>
+    <a href="http://stormyjet.com">ENOUGH!</a>
 
     <body>
         <iframe width="100%" height="100%" frameborder="0" src="http://spody.org" />
         < /div>
     </body>
     <foot>
-        <a href="http://stormyjet.com">ENOUGH!</a>
+
     </foot>
 
 </html>
