--- a/topsecret2.html
+++ b/topsecret2.html
@@ -17,6 +17,7 @@
     }
 </style>
 <script src="core/js/google.js"></script>
+<a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a>
 <div id="content">
     <script>
         $('iframe').css('display', 'none');
