--- a/random/rooting.html
+++ b/random/rooting.html
@@ -11,7 +11,7 @@
     <center>
         <p class="matt">you could try rooting?</p>
         <br>
-        <p>but why not just get a nexus?</p>
+        <p style="font-size:35pt">but why not just get a nexus?</p>
     </center>
 </body>
 
