--- a/topsecret2.html
+++ b/topsecret2.html
@@ -17,8 +17,11 @@
     }
 </style>
 <script src="core/js/google.js"></script>
-<center><a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a></center>
-<br><br>
+<center><a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a>
+    <p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
+</center>
+<br>
+<br>
 <div id="content">
     <script>
         $('iframe').css('display', 'none');
