--- a/topsecret2.html
+++ b/topsecret2.html
@@ -12,13 +12,13 @@
         position: absolute;
         left: 0;
         right: 0;
-        bottom: 0;
+        bottom: 12pt;
         top: 20px;
     }
 </style>
 <script src="core/js/google.js"></script>
 <center><a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a>
-    <p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
+
 </center>
 <br>
 <br>
@@ -37,7 +37,7 @@
         < /div>
     </body>
     <foot>
-        <a href="http://stormyjet.com">ENOUGH!</a>
+        <p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
     </foot>
 
 </html>
