--- a/topsecret2.html
+++ b/topsecret2.html
@@ -12,7 +12,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        bottom: 12pt;
+        bottom: 15px;
         top: 20px;
     }
 </style>
