--- a/topsecret2.html
+++ b/topsecret2.html
@@ -12,11 +12,12 @@
         position: absolute;
         left: 0;
         right: 0;
-        bottom: 15px;
-        top: 20px;
+        bottom: 0;
+        top: 25px;
     }
 </style>
 <script src="core/js/google.js"></script>
+<p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
 <center><a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a>
 
 </center>
@@ -38,7 +39,7 @@
     </body>
     <br>
     <foot>
-        <p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
+
     </foot>
 
 </html>
