--- a/topsecret2.html
+++ b/topsecret2.html
@@ -18,7 +18,8 @@
 </style>
 <script src="core/js/google.js"></script>
 <p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
-<center><a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a>
+<br>
+<center><a style="font-size:15pt" href="http://stormyjet.com">No more!</a> | <a style="font-size:15pt" href="topsecret2.html">Another!</a>
 
 </center>
 <br>
