--- a/topsecret2.html
+++ b/topsecret2.html
@@ -17,10 +17,9 @@
     }
 </style>
 <script src="core/js/google.js"></script>
-<p style="font-size:10pt">i don't own these. some may be nsfw, powered by spody.org</p>
-<br>
-<center><a style="font-size:15pt" href="http://stormyjet.com">No more!</a> | <a style="font-size:15pt" href="topsecret2.html">Another!</a>
-
+<center>
+    <p><a style="font-size:15pt" href="http://stormyjet.com">No more!</a> | <a style="font-size:15pt" href="topsecret2.html">Another!</a> | <a href="http://spody.org">The Source</a>
+    </p>
 </center>
 <br>
 <br>
