--- a/topsecret2.html
+++ b/topsecret2.html
@@ -18,8 +18,7 @@
 </style>
 <script src="core/js/google.js"></script>
 <center>
-    <p><a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a> | <a href="http://spody.org">The Source</a>
-    </p>
+    <a href="http://stormyjet.com">No more!</a> | <a href="topsecret2.html">Another!</a> | <a href="http://spody.org">The Source</a>
 </center>
 <br>
 <br>
