--- a/topsecret2.html
+++ b/topsecret2.html
@@ -1,5 +1,31 @@
 <!DOCTYPE html>
 <html>
+<title>The best page on the internet</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="description" content="This is the official website for StormyJet. I don't know why I said official because I'm not popular enough for fakes.">
+<meta name="keywords" content="stormy , stormyjet , stormys website , website ">
+<meta name="robot" content="index,follow">
+<meta name="author" content="stormyjet">
+<meta name="language" content="en-us">
+<meta name="revisit-after" content="30">
+<meta name="google-site-verification" content="OkvES3vkDmmuSt2GLXE6-uSqPoyssekJ5quiSMuP5RM" />
+<link rel="shortcut icon" href="/core/img/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/core/img/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/core/img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/core/img/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/core/img/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/core/img/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/core/img/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/core/img/apple-touch-icon-152x152.png">
+<link rel="icon" type="image/png" href="/core/img/favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="/core/img/favicon-160x160.png" sizes="160x160">
+<link rel="icon" type="image/png" href="/core/img/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/core/img/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/core/img/favicon-32x32.png" sizes="32x32">
+<meta name="msapplication-TileColor" content="#000000">
+<meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
+<meta name="msapplication-config" content="/core/img/browserconfig.xml">
 <style type="text/css">
     body,
     html {
