--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <link href="http://stormyjet.com/core/css/bootstrap.min.css" rel="stylesheet">
 <script src="http://stormyjet.com/core/js/google.js"></script>
 <script src="http://stormyjet.com/core/js/bootstrap.min.js"></script>
+<script src="core/js/jquery.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
