--- a/meteor/mobile.html
+++ b/meteor/mobile.html
@@ -7,6 +7,7 @@
 <!--<![endif]-->
 <title>Hold On!</title>
 <meta name="author" content="StormyJet" />
+<script src="../core/js/jquery.js"></script>
 
 <head>
     <meta charset="utf-8">
