--- a/random/nexus.html
+++ b/random/nexus.html
@@ -5,11 +5,27 @@
 <head>
     <link href="css/teething.css" rel="stylesheet">
     <link href="css/justified-nav.css" rel="stylesheet">
+    <script type="text/javascript">
+        WebFontConfig = {
+            google: {
+                families: ['Roboto:400,300:latin']
+            }
+        };
+        (function() {
+            var wf = document.createElement('script');
+            wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+                '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+            wf.type = 'text/javascript';
+            wf.async = 'true';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(wf, s);
+        })();
+    </script>
 </head>
 
 <body>
     <center>
-        <p class="matt">please get a nexus</p>
+        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">please get a nexus</p>
     </center>
 </body>
 
