--- a/stuff/nexus/nexus.html
+++ b/stuff/nexus/nexus.html
@@ -25,7 +25,7 @@
 
 <body>
     <center>
-        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">but why not just get a nexus?</p>
+        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">please get a nexus</p>
     </center>
 </body>
 
