--- a/stuff/nexus/nexus.html
+++ b/stuff/nexus/nexus.html
@@ -25,7 +25,9 @@
 
 <body>
     <center>
-        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">please get a nexus</p>
+        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">get a nexus</p>
+        <br>
+        <p style="font-family: 'Roboto', sans-serif;font-weight:300;">now</p>
     </center>
 </body>
 
