--- a/random/rooting.html
+++ b/random/rooting.html
@@ -25,7 +25,8 @@
 
 <body>
     <center>
-        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">but why not just get a nexus?</p>
+        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">you can try rooting?</p>
+        <p style="font-family: 'Roboto', sans-serif;font-size:350%;font-weight:300;">but why not just get a nexus?</p>
     </center>
 </body>
 
