--- a/stuff/nexus/nexus2.html
+++ b/stuff/nexus/nexus2.html
@@ -25,9 +25,8 @@
 
 <body>
     <center>
-        <p style="font-family: 'Roboto', sans-serif;font-size:1599%;font-weight:300;">get a nexus</p>
+        <p style="font-family: 'Roboto', sans-serif;font-size:400%;font-weight:300;">You should get a Nexus before I beat you over the head with this brick on which I've written 'I told you to get a Nexus'</p>
         <br>
-        <p style="font-family: 'Roboto', sans-serif;font-weight:300;font-size:300%;">now</p>
     </center>
 </body>
 
