--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="core/css/octicons.css" rel="stylesheet">
 <link href="core/css/sprockets-octicons.scss" rel="stylesheet">
 <script src="core/js/jquery.js"></script>
+<script src="/core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
