--- a/meteor/index.html
+++ b/meteor/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="../core/css/bootstrap.min.css">
     <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+    <script src="/core/js/bootstrap.min.js"></script>
 </head>
 
 <body>
