--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <!--<li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>-->
+                    <li class="bg-danger"><a href="open/">openNews</a>
+                    </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
