--- a/template.html
+++ b/template.html
@@ -7,6 +7,7 @@
 <link href="core/css/octicons.css" rel="stylesheet">
 <link href="core/css/sprockets-octicons.scss" rel="stylesheet">
 <script src="core/js/jquery.js"></script>
+<script src="/core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -102,8 +103,8 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <!--<li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>-->
+                    <li class="bg-danger"><a href="open/">openNews</a>
+                    </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
                 </ul>
