--- a/things.html
+++ b/things.html
@@ -102,8 +102,8 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <!--<li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>-->
+                    <li class="bg-danger"><a href="open/">openNews</a>
+                    </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
