--- a/open/index.html
+++ b/open/index.html
@@ -82,8 +82,8 @@
                     </li>
                     <li><a class="roboto" href="rules.html">Rules</a>
                     </li>
-                    <li class="roboto navbar-text alert-warning">
-                        <center><strong>Hey!</strong> This website is <strong>not quite ready</strong> for primetime yet. Bear with any broken things. Thanks.</center>
+                    <!--<li class="roboto navbar-text alert-warning">
+                        <center><strong>Hey!</strong> Alert goes here</center>-->
                     </li>
                     <!--</div>-->
                 </ul>
@@ -199,7 +199,7 @@
             <p class="roboto">
                 Made by StormyJet. Uses code from Bootstrap.
                 <br>Made with <span class="octicon octicon-heart"></span> and hosted on <span class="octicon octicon-logo-github"></span>
-                <br>Please read the <a href="terms.html">terms and conditions.</a> They are very simple.
+
             </p>
 
         </center>
