--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="core/css/sprockets-octicons.scss" rel="stylesheet">
 <script src="core/js/jquery.js"></script>
 <script src="/core/js/bootstrap.min.js"></script>
+<link href="core/css/font-awesome.min.css" rel="stylesheet">
+<link href="core/scss/font-awesome.scss" rel="stylesheet">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -203,6 +205,9 @@
                 <p>
                     Made by StormyJet. Uses code from Bootstrap.
                     <br>Made with <span class="octicon octicon-heart"></span> and hosted on <span class="octicon octicon-logo-github"></span>
+                    <br>
+                    <center><span class="fa fa-html5 fa-2x"></span>  <span class="fa fa-css3 fa-2x"></span>
+                    </center>
                 </p>
 
             </center>
