--- a/meteor/mobile.html
+++ b/meteor/mobile.html
@@ -47,7 +47,7 @@
                     <!--<li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-info"><a href="../index.html">Stormy's Wesbite</a>
+                    <li class="bg-success"><a href="../index.html">Stormy's Wesbite</a>
                     </li>
                 </ul>
             </div>
