--- a/open/rules.html
+++ b/open/rules.html
@@ -70,7 +70,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand roboto" href="../topsecret.html">openNews</a>
+                <a class="navbar-brand roboto" href="index.html">openNews</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -84,7 +84,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li class="bg-primary"><a class="roboto" style="color:white" href="../index.html">Main Site</a>
+                    <li class="bg-success"><a class="roboto" style="color:white" href="../index.html">Main Site</a>
                     </li>
                 </ul>
             </div>
