--- a/open/rules.html
+++ b/open/rules.html
@@ -3,12 +3,12 @@
 <link href="core/css/bootstrap.custom.css" rel="stylesheet">
 <script src="../core/js/google.js" rel="prefetch"></script>
 <script src="../core/js/bootstrap.min.js"></script>
-<link href="/core/css/custom.css" rel="stylesheet">
+<link href="/core/css/bootstrap.min.css" rel="stylesheet">
 <link href="../core/css/octicons.css" rel="stylesheet">
 <link href="../core/css/sprockets-octicons.scss" rel="stylesheet">
 <script src="../core/js/jquery.js"></script>
-<link href="../core/css/custom.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+<!--link href="../core/css/custom.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>-->
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
