--- a/nostalgia/explain.html
+++ b/nostalgia/explain.html
@@ -48,12 +48,17 @@
                             </center>
                         </div>
                     </div>
-                    <p class="notfound">
-                        This page has most likley been removed! Oh no! Nostalgia does not currently have a copy, and probably will never have a copy. Sorry!</p>
-                    <p class="lead"><a href="index-beforeuni.html">Click here for the homepage before UniNav</a>
-                        <p class="lead"><a href="index-afteruni.html">Click here for the homepage after UniNav</p>
-                            <p class="lead"><a href="http://stormyjet.com">Click here for the current homepage</a>
-                        </p>
+                    <h3>
+                        This page has most likley been removed!
+                        <br>Oh no!
+                        <br>We don't currently have a copy, and probably will never have a copy. Sorry!</h3>
+                    <p class="lead"><a href="index-Dropbox.html">Click here for the homepage in the dropbox days</a>
+                    </p>
+                    <p class="lead"><a href="index-UniNav.html">Click here for the homepage after UniNav</p>
+                    <p class="lead"><a href="index-NoCosmic.html">Click here for the homepage before Cosmic Nueue</a>
+                    </p>
+                    <p class="lead"><a href="http://stormyjet.com">Click here for the current homepage</a>
+                    </p>
                     </p>
                 </body>
             </center>
