--- a/404.html
+++ b/404.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href="http://stormyjet.com/core/css/bootstrap.min.css" rel="stylesheet">
+<script src="http://stormyjet.com/core/js/candy.js"></script>
 <script src="http://stormyjet.com/core/js/google.js"></script>
 <script src="http://stormyjet.com/core/js/bootstrap.min.js"></script>
-<script src="core/js/jquery.js"></script>
+<link href="http://stormyjet.com/core/css/octicons.css" rel="stylesheet">
+<link href="http://stormyjet.com/core/css/sprockets-octicons.scss" rel="stylesheet">
+<script src="http://stormyjet.com/core/js/jquery.js"></script>
+<script src="http://stormyjet.com/core/js/bootstrap.min.js"></script>
+<link href="http://stormyjet.com/core/css/font-awesome.min.css" rel="stylesheet">
+<link href="http://stormyjet.com/core/scss/font-awesome.scss" rel="stylesheet">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -96,8 +102,8 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <!--<li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>-->
+                    <li class="bg-danger"><a href="http://stormyjet.com/open/">openNews</a>
+                    </li>
                     <li class="bg-info"><a href="http://stormyjet.com/meteor/index.html">Meteor Game</a>
                     </li>
                 </ul>
