--- a/nostalgia/index-NoCosmic.html
+++ b/nostalgia/index-NoCosmic.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/candy.js"></script>
-<script src="core/js/google.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
-<link href="core/css/octicons.css" rel="stylesheet">
-<link href="core/css/sprockets-octicons.scss" rel="stylesheet">
-<script src="core/js/jquery.js"></script>
-<script src="/core/js/bootstrap.min.js"></script>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<script src="http://stomryjet.com/core/js/candy.js"></script>
+<script src="http://stomryjet.com/core/js/google.js"></script>
+<script src="http://stomryjet.com/core/js/bootstrap.min.js"></script>
+<link href="http://stomryjet.com/core/css/octicons.css" rel="stylesheet">
+<link href="http://stomryjet.com/core/css/sprockets-octicons.scss" rel="stylesheet">
+<script src="http://stomryjet.com/core/js/jquery.js"></script>
+<script src="http://stomryjet.com/core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -87,9 +87,9 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
+                    <li><a href="explain.html">Blog</a>
                     </li>
-                    <li><a href="things.html">Things I Made</a>
+                    <li><a href="explain.html">Things I Made</a>
                     </li>
 
                     <!--<li class="dropdown">
@@ -112,13 +112,13 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <li class="bg-danger"><a href="open/">openNews</a>
+                    <li class="bg-danger"><a href="explain.html">openNews</a>
                     </li>
-                    <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
+                    <li class="bg-info"><a href="explain.html">Meteor Game</a>
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
                     </li>
-                    <li><a href="stats.html"><span class="octicon octicon-pulse"></span></a>
+                    <li><a href="explain.htmll"><span class="octicon octicon-pulse"></span></a>
                     </li>
                 </ul>
             </div>
@@ -155,11 +155,11 @@
             <!--end the gray box-->
             <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
                 <br>
-                <a href="random/cancer.html">The free online cancer checker</a>
+                <a href="explain.html">The free online cancer checker</a>
                 <br>
-                <a href="stuff/pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                <a href="explain.html">I also redesigned the website for Pokecrate once.</a>
                 <br>
-                <a href="things.html">Click here for more!</a>
+                <a href="explain.html">Click here for more!</a>
                 <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                 <br>
             </p>
@@ -172,7 +172,7 @@
             <div class="col-lg-4 ">
                 <h2>Meteor Game</h2>
                 <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="meteor/index.html" role="button ">View details &raquo;</a>
+                <p><a class="btn btn-primary " href="explain.html" role="button ">View details &raquo;</a>
                 </p>
             </div>
             <div class="col-lg-4 ">
@@ -191,7 +191,7 @@
             <div class="col-lg-4 ">
                 <h2>Blog</h2>
                 <p>I have one of those.</p>
-                <p><a class="btn btn-primary " href="blog.html" role="button ">Go now &raquo;</a>
+                <p><a class="btn btn-primary " href="explain.html" role="button ">Go now &raquo;</a>
                 </p>
             </div>
         </div>
