--- a/404.html
+++ b/404.html
@@ -153,7 +153,7 @@
                     <br>
                     <a href="http://stormyjet.com/meteor/">Meteor Game Home</a>
                     <br>
-                    <a href="http://stormyjet.com/htda/">How To Do Anything Home</a>
+                    <a href="http://stormyjet.com/open/">openNews Home</a>
                     <br>
                     <a href="http://stormyjet.com/stuff/pokecrate/">Pokecrate Home</a>
                     <br>
@@ -167,6 +167,10 @@
                         <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
                         <br>
                         <a href="http://stormyjet.com/things">List of Things I made</a>
+                        <br><a href="http://stormyjet.com/random/burn">List of Tired jokes in the United States</a>
+                        <br>
+                        <a href="http://stormyjet.com/random/nexus">A message for everyone</a>
+
                         <hr>
                         <p class="lead">Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
                         </p>
