--- a/404.html
+++ b/404.html
@@ -157,6 +157,8 @@
                     <br>
                     <a href="http://stormyjet.com/stuff/pokecrate/">Pokecrate Home</a>
                     <br>
+                    <a href="http://stormyjet.com/nostalgia">Nostalgia Home</a>
+                    <br>
                     <hr>
                     <p class="lead">None of them? Here are links to other things I have made.
                         <br>
