--- a/404.html
+++ b/404.html
@@ -102,6 +102,8 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
+                    <li class="bg-warning"><a href="http://stormyjet.com/nostalgia/">Nostalgia</a>
+                    </li>
                     <li class="bg-danger"><a href="http://stormyjet.com/open/">openNews</a>
                     </li>
                     <li class="bg-info"><a href="http://stormyjet.com/meteor/index.html">Meteor Game</a>
