--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                     </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <!--<li>
-                        <p class="navbar-text navbar-right">Under Construction |</p>
-                    </li>-->
+
+                    <li class="bg-warning"><a href="nostalgia/">Nostalgia</a>
+                    </li>
                     <li class="bg-danger"><a href="open/">openNews</a>
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
