--- a/stats.html
+++ b/stats.html
@@ -103,6 +103,8 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
+                    <li class="bg-warning"><a href="nostalgia/">Nostalgia</a>
+                    </li>
                     <li class="bg-danger"><a href="open/">openNews</a>
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
