--- a/nostalgia/index-Dropbox.html
+++ b/nostalgia/index-Dropbox.html
@@ -34,7 +34,59 @@
     <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <!--Nav Begins Here-->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="topsecret.html">Nostalgia
+                </a>
+
+
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li class="active"><a href="#">Dropbox Homepage</a>
+                    </li>
+                    <li><a href="index-UniNav.html">UniNav Homepage</a>
+                    </li>
+                    <li><a href="index-NoCosmic.html">Before Cosmic Homepage</a>
+                    </li>
+
+                    <!--<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="random/cancer.html">Cancer Checker</a>
+                            </li>
+                            <li><a href="stuff/pokecrate/index.html">Pokecrate</a>
+                            </li>
+                            <li><a href="http://twitter.com/stormyjet">Twitter</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Technical Stuff</li>
+                            <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
+                            </li>
+                        </ul>
+                    </li>-->
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li class="bg-success"><a href="nostalgia/">Main Site</a>
+                    </li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+    <!--Nav ends here-->
+    <div class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
