--- a/nostalgia/index-UniNav.html
+++ b/nostalgia/index-UniNav.html
@@ -32,6 +32,58 @@
     <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
         <br>This page is old. It is a responsive webpage but it probably looks like crap. It is not made for this small of a screen. Sorry if it looks strange!</div>
 </div>
+<!--Nav Begins Here-->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="topsecret.html">Nostalgia
+                </a>
+
+
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a>
+                </li>
+                <li><a href="index-Dropbox.html">Dropbox Homepage</a>
+                </li>
+                <li class="active"><a href="#">UniNav Homepage</a>
+                </li>
+                <li><a href="index-NoCosmic.html">Before Cosmic Homepage</a>
+                </li>
+
+                <!--<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="random/cancer.html">Cancer Checker</a>
+                            </li>
+                            <li><a href="stuff/pokecrate/index.html">Pokecrate</a>
+                            </li>
+                            <li><a href="http://twitter.com/stormyjet">Twitter</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Technical Stuff</li>
+                            <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
+                            </li>
+                        </ul>
+                    </li>-->
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+
+                <li class="bg-success"><a href="nostalgia/">Main Site</a>
+                </li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</div>
+<!--Nav ends here-->
 
 <body>
 
