--- a/404.html
+++ b/404.html
@@ -21,23 +21,23 @@
     <meta name="revisit-after" content="30">
     <meta name="google-site-verification" content="OkvES3vkDmmuSt2GLXE6-uSqPoyssekJ5quiSMuP5RM" />
     <link rel="shortcut icon" href="/core/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/core/img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/core/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/core/img/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/core/img/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/core/img/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/core/img/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/core/img/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/core/img/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/core/img/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/core/img/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/core/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/core/img/favicon-32x32.png" sizes="32x32">
+    <link rel="apple-touch-icon" sizes="57x57" href="http://stormyjet.com//core/img/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://stormyjet.com//core/img/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://stormyjet.com//core/img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="http://stormyjet.com//core/img/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="http://stormyjet.com//core/img/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="http://stormyjet.com//core/img/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="http://stormyjet.com//core/img/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="http://stormyjet.com//core/img/apple-touch-icon-152x152.png">
+    <link rel="icon" type="image/png" href="http://stormyjet.com//core/img/favicon-196x196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="http://stormyjet.com//core/img/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="http://stormyjet.com//core/img/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="http://stormyjet.com//core/img/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="http://stormyjet.com//core/img/favicon-32x32.png" sizes="32x32">
     <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
-    <meta name="msapplication-config" content="/core/img/browserconfig.xml">
-    <title>404</title>
+    <meta name="msapplication-TileImage" content="http://stormyjet.com//core/img/mstile-144x144.png">
+    <meta name="msapplication-config" content="http://stormyjet.com//core/img/browserconfig.xml">
+    <title>You're Lost!</title>
 </head>
 
 <body>
@@ -81,7 +81,8 @@
                     </li>
                     <li><a href="http://stormyjet.com/things.html">Things I Made</a>
                     </li>
-
+                    <li><a href="http://stormyjet.com/contact.html">Contact</a>
+                    </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
