--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                     </li>
                     <li><a href="things.html">Things I Made</a>
                     </li>
-
+                    <li><a href="contact.html">Contact</a>
+                    </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
