--- a/things.html
+++ b/things.html
@@ -79,6 +79,8 @@
                     </li>
                     <li class="active"><a href="#">Things I Made</a>
                     </li>
+                    <li><a href="contact.html">Contact</a>
+                    </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
@@ -108,10 +110,7 @@
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
-                    <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
-                    </li>
-                    <li><a href="stats.html"><span class="octicon octicon-pulse"></span></a>
-                    </li>
+
                 </ul>
             </div>
             <!--/.nav-collapse -->
